fix: token parse error
